Fix issue where 'Show More/Less' were both visible after clicking bottom-most 'load more' button

--- a/app/assets/stylesheets/widgets/grid-block-widget/grid-block-widget.scss
+++ b/app/assets/stylesheets/widgets/grid-block-widget/grid-block-widget.scss
@@ -972,17 +972,18 @@ html {
   padding-right: 24px !important;
 }
 
-a.grid-block-widget__button {
-  display: flex !important;
-  justify-content: center;
-  text-decoration: underline;
-  color: $cu-red !important;
+html body {
+  a.grid-block-widget__button {
+    display: flex;
+    justify-content: center;
+    text-decoration: underline;
+    color: $cu-red !important;
 
-  &--transparent {
-    background-color: transparent !important;
+    &--transparent {
+      background-color: transparent !important;
+    }
   }
 }
-
 // END !!!DON'T MERGE!!!
 
 @import "grid-block-widget-ie.scss";
